<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cityfreqs.audiodsp.MainActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/debug_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/debug_title" />
    <TextView
        android:id="@+id/debug_text"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/debug_title_text"
        android:scrollbars = "vertical"
        android:gravity="bottom"
        android:background="#000000"
        android:textColor="#00ff00"
        android:text="@string/debug_text" />
       
    <View 
        android:id="@+id/hr1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_height="1px" 
        android:layout_width="fill_parent" 
        android:layout_below="@+id/debug_text"
        android:background="#000000"/>
    <TextView
        android:id="@+id/processing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/hr1" 
        android:textStyle="bold"
        android:text="@string/processing_title" />    
    <TextView
        android:id="@+id/gate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/processing_title"
        android:text="@string/threshold_gate" /> 
     <TextView
        android:id="@+id/hifreq_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gate_text"
        android:layout_centerHorizontal="true" 
        android:textStyle="bold"
        android:text="@string/hifreq_text" />     
     <SeekBar
        android:id="@+id/hi_freq_seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/hifreq_text"
        android:layout_marginTop="8dp" />
     
    <TextView
        android:id="@+id/shift_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hi_freq_seek"
        android:layout_centerHorizontal="true" 
        android:textStyle="bold"
        android:text="@string/shift_text" />     
     <SeekBar
        android:id="@+id/shift_seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/shift_text"
        android:layout_marginTop="8dp" />
 
    <TextView
        android:id="@+id/gain_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shift_seek"
        android:layout_centerHorizontal="true" 
        android:textStyle="bold"
        android:text="@string/gain_text" />     
     <SeekBar
        android:id="@+id/gain_seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/gain_text"
        android:layout_marginTop="8dp" />     
     
    <View 
        android:id="@+id/hr2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_height="1px" 
        android:layout_width="fill_parent" 
        android:layout_below="@+id/gain_seek"
        android:background="#000000"/> 
    <TextView
        android:id="@+id/visualiser_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/hr2" 
        android:textStyle="bold"
        android:text="@string/visualiser_title" />
          
    <com.cityfreqs.audiodsp.AudioVisualiserView
        android:id="@+id/audio_visualiser_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/visualiser_title" />
    
</RelativeLayout>
